--- a/.github/workflows/energy-origin.yaml
+++ b/.github/workflows/energy-origin.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1.9.0
       with:
-        dotnet-version: 6.0.101
+        dotnet-version: 6.0.x
 
     - name: Restore
       working-directory: ./services/API
