--- a/.github/workflows/release_and_update_env.yaml
+++ b/.github/workflows/release_and_update_env.yaml
@@ -15,7 +15,7 @@ concurrency:
       
 jobs:
   dotnet_validate:
-    name: dotnet validate 
+    name: Dotnet validate 
     runs-on: ubuntu-latest
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
