Docker and structure adventures
Move around folder structure. 
Fix Docker for VSCode.
Unresolved Docker issues left with Visual Studio.

--- a/.github/workflows/release_and_update_env.yaml
+++ b/.github/workflows/release_and_update_env.yaml
@@ -12,7 +12,11 @@ on:
 concurrency: 
   group: ${{ github.ref }}
   cancel-in-progress: false
-      
+
+defaults:
+  run:
+    working-directory: ./domains/data-sync/services/DataSync.API
+
 jobs:
   dotnet_validate:
     name: Dotnet validate 
@@ -34,19 +38,15 @@ jobs:
         dotnet-version: 6.0.101
 
     - name: Restore
-      working-directory: ./services/API
       run: dotnet restore
       
     - name: Linting
-      working-directory: ./services/API
       run: dotnet format --verify-no-changes -v diag
 
     - name: Build
-      working-directory: ./services/API
       run: dotnet build --configuration Release --no-restore
 
     - name: Test
-      working-directory: ./services/API
       run: dotnet test
 
   define_build:
