--- a/domains/data-sync/services/DataSync.API/.devcontainer/devcontainer.json
+++ b/domains/data-sync/services/DataSync.API/.devcontainer/devcontainer.json
@@ -48,7 +48,7 @@
 	//      "mounts": [ "source=${env:HOME}${env:USERPROFILE}/.aspnet/https,target=/home/vscode/.aspnet/https,type=bind" ],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "dotnet restore && dotnet dev-certs https --clean && dotnet dev-certs https -t",
+	"postCreateCommand": "dotnet restore",
 
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
