--- a/domains/data-sync/services/DataSync.API/.vscode/launch.json
+++ b/domains/data-sync/services/DataSync.API/.vscode/launch.json
@@ -10,14 +10,15 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/WeatherApi/bin/Debug/net6.0/WeatherApi.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}/WeatherApi",
+            "program": "${workspaceFolder}/API/bin/Debug/net6.0/API.dll",
+            "args": ["urls=http://localhost:8080"],
+            "cwd": "${workspaceFolder}/API",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
                 "action": "openExternally",
-                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
+                "uriFormat": "%s/swagger"
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
@@ -26,7 +27,7 @@
                 "/Views": "${workspaceFolder}/Views"
             }
         },
-        {1
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
