Try to have docker working

--- a/.github/workflows/release_and_update_env.yaml
+++ b/.github/workflows/release_and_update_env.yaml
@@ -58,7 +58,7 @@ jobs:
         [
           { 
             "deployment_name": "api",
-            "dockerfile": "services/API/API/Dockerfile",
+            "dockerfile": "domains/data-sync/services/DataSync.API/API/Dockerfile",
             "image_name": "eo-data-sync",
             "image_tag": "${{ steps.get_api_container_version.outputs.semver }}"
           }
