--- a/domains/data-sync/services/DataSync.API/API/Dockerfile
+++ b/domains/data-sync/services/DataSync.API/API/Dockerfile
@@ -1,15 +1,21 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR "/src/API"
-COPY ./API/API.csproj .
-RUN dotnet restore API.csproj
-COPY ./API .
-RUN dotnet publish "API.csproj" -c Release -o /app/publish
-
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS final
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
-EXPOSE 5000
-COPY --from=build /app/publish .
-HEALTHCHECK CMD curl --fail http://localhost:5000/health || exit 1    
+
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+WORKDIR /src
+COPY ["API/API.csproj", "API/"]
+RUN dotnet restore "API/API.csproj"
+COPY . .
+WORKDIR "/src/API"
+RUN dotnet build "API.csproj" -c Release -o /app/build
+
+FROM build AS publish
+RUN dotnet publish "API.csproj" -c Release -o /app/publish
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
+HEALTHCHECK CMD curl --fail http://localhost:5000/health || exit 1  
 ENTRYPOINT ["dotnet", "API.dll"]
