--- a/domains/data-sync/services/DataSync.API/API/Properties/launchSettings.json
+++ b/domains/data-sync/services/DataSync.API/API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7143;http://localhost:5143",
+      "applicationUrl": "http://localhost:8080",
       "dotnetRunMessages": true
     },
     "IIS Express": {
@@ -32,7 +32,7 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": false
     }
   }
 }
