--- a/.github/workflows/build-chart-data-sync.yaml
+++ b/.github/workflows/build-chart-data-sync.yaml
@@ -38,7 +38,7 @@ jobs:
   build_container_and_release_chart:
     name: Build containers
     needs: [define_build]
-    uses: Energinet-DataHub/.github/.github/workflows/build-containers-and-release-chart.yaml@main
+    uses: Energinet-DataHub/.github/.github/workflows/build-containers-and-release-chart.yaml@feature/allow-empty-matrix
     with:
       helm_repository: ${{ github.repository_owner }}/helm-charts
       chart_folder: domains/data-sync/chart
