--- a/domains/data-sync/chart/templates/health-check-deployment.yaml
+++ b/domains/data-sync/chart/templates/health-check-deployment.yaml
@@ -29,6 +29,8 @@ spec:
           env:
             - name: DATAHUB2ENDPOINT
               value: {{ required "datahub.health_check.endpoint is required" .Values.datahub.health_check.endpoint }}
+            - name: SLEEPINTERVAL
+              value: {{ required "datahub.health_check.sleep_interval is required" .Values.datahub.health_check.sleep_interval }}
           volumeMounts:
             - name: health-check-script-volume
               mountPath: "/tmp/health-script"
