--- a/domains/data-sync/chart/values.yaml
+++ b/domains/data-sync/chart/values.yaml
@@ -23,7 +23,7 @@ datahub:
     enabled: false
 
     # Endpoint to call
-    endpoint: https://example.com
+    # endpoint: YOUR_ENCRYPTED_ENDPOINT
 
     # Time to wait in seconds between requests
     sleep_interval: 3600
