add liveness prope

--- a/domains/data-sync/chart/templates/health-check-deployment.yaml
+++ b/domains/data-sync/chart/templates/health-check-deployment.yaml
@@ -20,11 +20,16 @@ spec:
         - name: health-check
           image: curlimages/curl:7.82.0
           command: [ "/bin/sh", "/tmp/health-script/run-me.sh" ]
+          livenessProbe:
+            exec:
+                command: |-
+                  grep -q 200 /tmp/healthy
+            initialDelaySeconds: 10
+            periodSeconds: 30
+            failureThreshold: 200
           env:
             - name: SLEEPINTERVAL
               value: {{ required "datahub.health_check.sleep_interval is required" .Values.datahub.health_check.sleep_interval | quote}}
-            # - name: DATAHUB2ENDPOINT
-            #   value: {{ required "datahub.health_check.endpoint is required" .Values.datahub.health_check.endpoint | quote }}
             - name: DATAHUB2ENDPOINT
               valueFrom:
                 secretKeyRef:
