--- a/domains/data-sync/chart/templates/health-check-script.yaml
+++ b/domains/data-sync/chart/templates/health-check-script.yaml
@@ -5,7 +5,6 @@ metadata:
 data:
     run-me.sh: |-
             while true; do
-                curl -v -X HEAD --fail $DATAHUB2ENDPOINT
-                date
+                curl -s -X HEAD --write-out %{http_code} --fail $DATAHUB2ENDPOINT > /tmp/healthy
                 sleep $SLEEPINTERVAL
             done
