--- a/domains/data-sync/chart/templates/health-check-script.yaml
+++ b/domains/data-sync/chart/templates/health-check-script.yaml
@@ -5,6 +5,7 @@ metadata:
 data:
     run-me.sh: |-
             while true; do
-                curl -s -X HEAD --write-out %{http_code} --fail $DATAHUB2ENDPOINT > /tmp/healthy
+                curl --head --fail $DATAHUB2ENDPOINT
+                date
                 sleep $SLEEPINTERVAL
             done
