--- a/.github/workflows/build-chart-datahub2-api-mock.yaml
+++ b/.github/workflows/build-chart-datahub2-api-mock.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - domains/data-sync/**
+      - domains/datahub2-api-mock/**
 
 concurrency:
   group: ${{ github.ref }}
@@ -25,8 +25,15 @@ jobs:
         id: get_semver
         uses: Energinet-DataHub/.github/.github/actions/get-semver@main
         with:
-          yaml_file: domains/data-sync/chart/Chart.yaml
+          yaml_file: domains/datahub2-api-mock/chart/Chart.yaml
           yaml_path: version
+
+      - name: Get container version
+        id: get_api_container_version
+        uses: Energinet-DataHub/.github/.github/actions/get-semver@main
+        with:
+          yaml_file: domains/datahub2-api-mock/chart/values.yaml
+          yaml_path: imageTag
 
   build_container_and_release_chart:
     name: Build containers
@@ -34,7 +41,7 @@ jobs:
     uses: Energinet-DataHub/.github/.github/workflows/build-containers-and-release-chart.yaml@main
     with:
       helm_repository: ${{ github.repository_owner }}/helm-charts
-      chart_folder: domains/data-sync/chart
+      chart_folder: domains/datahub2-api-mock/chart
       chart_version: ${{ needs.define_build.outputs.chart_version }}
       containers: ${{ needs.define_build.outputs.containers }}
     secrets:
