--- a/.github/workflows/build-chart-data-sync.yaml
+++ b/.github/workflows/build-chart-data-sync.yaml
@@ -3,7 +3,7 @@ name: Build chart data sync
 on:
   pull_request:
     paths:
-      - domains/datahub2-api-mock/**
+      - domains/data-sync/**
   push:
     branches:
       - main
