--- a/domains/datahub2-api-mock/chart/templates/deployment.yaml
+++ b/domains/datahub2-api-mock/chart/templates/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: datahub2-api-mock-deployment
+  name: eo-datahub2-api-mock-deployment
   labels:
-    app: datahub2-api-mock
+    app: eo-datahub2-api-mock
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: datahub2-api-mock
+      app: eo-datahub2-api-mock
   template:
     metadata:
       labels:
-        app: datahub2-api-mock
+        app: eo-datahub2-api-mock
     spec:
       containers:
         - name: datahub2-api-mock
