Setup mock api to run on port 80.

--- a/domains/datahub2-api-mock/chart/templates/service.yaml
+++ b/domains/datahub2-api-mock/chart/templates/service.yaml
@@ -7,7 +7,6 @@ spec:
   selector:
     component: eo-datahub2-api-mock-deployment
   ports:
-  - name: eo-datahub2-api-mock-service
+  - name: http
     protocol: TCP
     port: 80
-    targetPort: 8080
