--- a/domains/datahub2-api-mock/chart/templates/deployment.yaml
+++ b/domains/datahub2-api-mock/chart/templates/deployment.yaml
@@ -4,28 +4,31 @@ metadata:
   name: eo-datahub2-api-mock-deployment
   labels:
     app: eo-datahub2-api-mock
+    energinet.dk/name: api-mock
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: eo-datahub2-api-mock
+      energinet.dk/name: api-mock
   template:
     metadata:
       labels:
         app: eo-datahub2-api-mock
+        energinet.dk/name: api-mock
     spec:
       containers:
         - name: datahub2-api-mock
           image: ghcr.io/energinet-datahub/eo-datahub2-api-mock:{{ .Values.imageTag }}
           ports:
-            - containerPort: 80
+            - containerPort: 8080
           livenessProbe:
             httpGet:
               path: /health
-              port: 80
+              port: 8080
           readinessProbe:
             httpGet:
               path: /health
-              port: 80
+              port: 8080
       imagePullSecrets:
         - name: container-registry-pullsecret
