--- a/domains/datahub2-api-mock/chart/templates/service.yaml
+++ b/domains/datahub2-api-mock/chart/templates/service.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.enable }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -11,3 +12,4 @@ spec:
     protocol: TCP
     port: 80
     targetPort: 8080
+{{ end }}
