--- a/domains/datahub2-api-mock/chart/templates/deployment.yaml
+++ b/domains/datahub2-api-mock/chart/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.enabled }}
+{{ if (.Values.datahub2_api_mock).enabled }}
 
 apiVersion: apps/v1
 kind: Deployment
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: datahub2-api-mock
-          image: ghcr.io/energinet-datahub/eo-datahub2-api-mock:{{ .Values.imageTag }}
+          image: ghcr.io/energinet-datahub/eo-datahub2-api-mock:{{ .Values.datahub2_api_mock.imageTag }}
           ports:
             - containerPort: 8080
           livenessProbe:
