--- a/.github/workflows/build-chart-data-sync.yaml
+++ b/.github/workflows/build-chart-data-sync.yaml
@@ -4,11 +4,14 @@ on:
   pull_request:
     paths:
       - domains/data-sync/**
+      - .github/workflows/build-chart-data-sync.yaml
+      - .github/workflows/pr-version-check-data-sync.yaml
   push:
     branches:
       - main
     paths:
       - domains/data-sync/**
+      - .github/workflows/build-chart-data-sync.yaml
 
 concurrency:
   group: ${{ github.ref }}
