--- a/.github/workflows/build-chart-datahub2-api-mock.yaml
+++ b/.github/workflows/build-chart-datahub2-api-mock.yaml
@@ -4,11 +4,14 @@ on:
   pull_request:
     paths:
       - domains/datahub2-api-mock/**
+      - .github/workflows/build-chart-datahub2-api-mock.yaml
+      - .github/workflows/pr-version-check-datahub2-api-mock.yaml
   push:
     branches:
       - main
     paths:
       - domains/datahub2-api-mock/**
+      - .github/workflows/build-chart-datahub2-api-mock.yaml
 
 concurrency:
   group: ${{ github.ref }}
