--- a/.github/workflows/build-chart-datahub2-api-mock.yaml
+++ b/.github/workflows/build-chart-datahub2-api-mock.yaml
@@ -36,7 +36,7 @@ jobs:
   build_container_and_release_chart:
     name: Build containers
     needs: [define_build]
-    uses: Energinet-DataHub/.github/.github/workflows/build-containers-and-release-chart.yaml@feature/change-to-deploy-keys
+    uses: Energinet-DataHub/.github/.github/workflows/build-containers-and-release-chart.yaml@main
     with:
       helm_repository: ${{ github.repository_owner }}/helm-charts
       chart_folder: domains/datahub2-api-mock/chart
@@ -50,7 +50,7 @@ jobs:
     needs: [build_container_and_release_chart]
     #only on: push to main OR PR on 'feature/**' branch
     if: github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'feature/')
-    uses: Energinet-DataHub/.github/.github/workflows/update-chart-in-env.yaml@feature/change-to-deploy-keys
+    uses: Energinet-DataHub/.github/.github/workflows/update-chart-in-env.yaml@main
     with:
       env_repository: ${{ github.repository_owner }}/eo-base-environment
       env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
