Add a step to build chart

--- a/.github/workflows/build-chart-emissions.yaml
+++ b/.github/workflows/build-chart-emissions.yaml
@@ -39,6 +39,13 @@ jobs:
         with:
           yaml_file: domains/emissions/chart/Chart.yaml
           yaml_path: version
+      
+      - name: Get container version
+        id: get_api_container_version
+        uses: Energinet-DataHub/.github/.github/actions/get-semver@main
+        with:
+          yaml_file: chart/values.yaml
+          yaml_path: eo-base-helm-chart.deployments.api.image.tag
 
   build_container_and_release_chart:
     name: Build containers
