Change image name

--- a/.github/workflows/build-chart-emissions.yaml
+++ b/.github/workflows/build-chart-emissions.yaml
@@ -28,7 +28,7 @@ jobs:
           { 
             "deployment_name": "api", 
             "dockerfile": "Dockerfile", 
-            "image_name": "eo-emissions-api", 
+            "image_name": "eo-emissions", 
             "image_tag": "${{ steps.get_api_container_version.outputs.semver }}" 
           }
         ]
