Add folder path

--- a/.github/workflows/build-chart-emissions.yaml
+++ b/.github/workflows/build-chart-emissions.yaml
@@ -44,7 +44,7 @@ jobs:
         id: get_api_container_version
         uses: Energinet-DataHub/.github/.github/actions/get-semver@main
         with:
-          yaml_file: chart/values.yaml
+          yaml_file: domains/emissions/chart/values.yaml
           yaml_path: eo-base-helm-chart.deployments.api.image.tag
 
   build_container_and_release_chart:
