--- a/.github/workflows/build-chart-emissions.yaml
+++ b/.github/workflows/build-chart-emissions.yaml
@@ -27,8 +27,8 @@ jobs:
         [
           { 
             "deployment_name": "api", 
-            "dockerfile": "Dockerfile", 
-            "image_name": "eo-emissions", 
+            "dockerfile": "domains/emissions/Emissions.API/API/Dockerfile", 
+            "image_name": "eo-emissions-api", 
             "image_tag": "${{ steps.get_api_container_version.outputs.semver }}" 
           }
         ]
