--- a/domains/emissions/Emissions.API/API/Dockerfile
+++ b/domains/emissions/Emissions.API/API/Dockerfile
@@ -6,7 +6,7 @@ ENV DATASYNCENDPOINT="http://host.docker.internal:8080/xxxxxx"
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["API.csproj", "API/"]
+COPY ["./API.csproj", "API/"]
 RUN dotnet restore "API.csproj"
 COPY . .
 WORKDIR "/src/API"
