--- a/.github/workflows/build-chart-emissions.yaml
+++ b/.github/workflows/build-chart-emissions.yaml
@@ -48,7 +48,7 @@ jobs:
   build_container_and_release_chart:
     name: Build containers
     needs: [define_build]
-    uses: Energinet-DataHub/.github/.github/workflows/build-containers-and-release-chart.yaml@feature/451-include-domain
+    uses: Energinet-DataHub/.github/.github/workflows/build-containers-and-release-chart.yaml@main
     with:
       helm_repository: ${{ github.repository_owner }}/helm-charts
       chart_folder: domains/emissions/chart
