--- a/.github/workflows/build-chart-datahub2-api-mock.yaml
+++ b/.github/workflows/build-chart-datahub2-api-mock.yaml
@@ -39,6 +39,7 @@ jobs:
       chart_folder: domains/datahub2-api-mock/chart
       chart_version: ${{ needs.define_build.outputs.chart_version }}
       containers: ${{ needs.define_build.outputs.containers }}
+      include_image_name: true
     secrets:
       deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
 
