--- a/.github/workflows/make-library-EnergyOriginAuthorization.yaml
+++ b/.github/workflows/make-library-EnergyOriginAuthorization.yaml
@@ -46,7 +46,7 @@ jobs:
       run: dotnet test --no-restore --verbosity normal *.Tests
 
     - name: Pack
-      run: dotnet pack --output build --configuration Release --no-restore -p:Version=${{ steps.get_version.output.result }} EnergyOriginAuthorization
+      run: dotnet pack --output build --configuration Release --no-restore -p:Version=${{ steps.get_version.outputs.result }} EnergyOriginAuthorization
 
     - name: Publish
       if: startsWith(github.ref, 'refs/heads/main')
