--- a/domains/emissions/Emissions.API/API/API.csproj
+++ b/domains/emissions/Emissions.API/API/API.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="System.ServiceModel.Http" Version="4.8.*" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.8.*" />
     <PackageReference Include="System.ServiceModel.Security" Version="4.8.*" />
+  	<PackageReference Include="EnergyOriginAuthorization" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
